force-app/main/default/objects/ProductItem/ProductItem.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>