force-app/main/default/objects/ProductItem/fields/EAM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EAM_Quantity__c</fullName>
    <description>stock levels from EAM</description>
    <label>EAM Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>