force-app/main/default/objects/ProductItem/fields/ItemID__c.field-meta.xml
<CustomField>
    <fullName>ItemID__c</fullName>
    <label>ItemID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>