force-app/main/default/objects/ProductItem/fields/MSN_LN_Material_Key__c.field-meta.xml
<CustomField>
    <fullName>MSN_LN_Material_Key__c</fullName>
    <description>This cross-object formula field is used to retrieve the unique &quot;LN Material Key&quot; from the Product and populate the field on the Product Item. This is then used e.g. by the field crew on their Field Service Mobile App to consume Products by scanning a printed Barcode (= LN Material Key) of the Product instead of having to search for it manually in the app.</description>
    <formula>Product2.MSN_LN_Material_Key__c</formula>
    <label>LN Material Key</label>
    <type>Text</type>
</CustomField>