force-app/main/default/objects/ProductItem/fields/MSN_LN_Store_Id__c.field-meta.xml
<CustomField>
    <fullName>MSN_LN_Store_Id__c</fullName>
    <formula>Location.MSN_LN_Store_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LN Store Id</label>
    <type>Text</type>
</CustomField>