force-app/main/default/objects/ProductItem/fields/MSN_Part_Type__c.field-meta.xml
<CustomField>
    <fullName>MSN_Part_Type__c</fullName>
    <description>Cross object formula that pulls the &quot;Part Type&quot; for the specific Part from the related &quot;Product&quot; record.</description>
    <formula>TEXT(Product2.MSN_Part_Type__c)</formula>
    <label>Part Type</label>
    <type>Text</type>
</CustomField>